--- a/apps/desktop/index.html
+++ b/apps/desktop/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/icon.png" />
+    <meta name="application-name" content="npw" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>desktop</title>
+    <title>npw</title>
   </head>
   <body>
     <div id="app"></div>
